--- a/behat.yml
+++ b/behat.yml
@@ -7,7 +7,8 @@ default:
 
     extensions:
         Behat\MinkExtension:
-            base_url: "http://localhost:8000"
+            base_url: "http://localhost:8000/"
+            selenium2: ~
             default_session: symfony
             sessions:
                 default:
